--- a/Cars.Infrastructure/Cars.Infrastructure.csproj
+++ b/Cars.Infrastructure/Cars.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Cars.CarsDb\Cars.CarsDb.csproj" />
+    <ProjectReference Include="..\Cars.Domain\Cars.Domain.csproj" />
   </ItemGroup>
 
 </Project>
